--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,4 +23,10 @@
         android:label="Graphs Screen"
         tools:layout="@layout/fragment_graphs" />
 
+    <fragment
+        android:id="@+id/nav_user"
+        android:name="com.example.myapplication.ui.UserFragment"
+        android:label="Graphs Screen"
+        tools:layout="@layout/fragment_user" />
+
 </navigation>
