Restructuring the layout of navigation in the phone app

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,17 +11,24 @@
         android:label="Home Screen"
         tools:layout="@layout/fragment_home" />
 
+
     <fragment
-        android:id="@+id/nav_settings"
-        android:name="com.example.myapplication.ui.SettingsFragment"
-        android:label="Settings Screen"
-        tools:layout="@layout/fragment_settings" />
+        android:id="@+id/nav_add_expense"
+        android:name="com.example.myapplication.ui.AddExpenseFragment"
+        android:label="Add Expense Screen"
+        tools:layout="@layout/fragment_add_expense" />
 
     <fragment
         android:id="@+id/nav_graphs"
         android:name="com.example.myapplication.ui.GraphsFragment"
         android:label="Graphs Screen"
         tools:layout="@layout/fragment_graphs" />
+
+    <fragment
+        android:id="@+id/nav_settings"
+        android:name="com.example.myapplication.ui.SettingsFragment"
+        android:label="Settings Screen"
+        tools:layout="@layout/fragment_settings" />
 
     <fragment
         android:id="@+id/nav_user"
