--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,10 +6,7 @@
         android:icon="@drawable/ic_home"
         android:title="Home" />
 
-    <item
-        android:id="@+id/nav_settings"
-        android:icon="@drawable/ic_settings"
-        android:title="Settings" />
+
 
     <item
         android:id="@+id/nav_graphs"
@@ -17,8 +14,19 @@
         android:title="Graphs" />
 
     <item
+        android:id="@+id/nav_add_expense"
+        android:icon="@drawable/ic_add_expense"
+        android:title="Add expense" />
+
+
+    <item
         android:id="@+id/nav_user"
         android:icon="@drawable/ic_user"
         android:title="User" />
+
+    <item
+        android:id="@+id/nav_settings"
+        android:icon="@drawable/ic_settings"
+        android:title="Settings" />
 
 </menu>
